# picd

./: README.md  clipboard_saver.py  run.sh
pictd-tauri/: .gitignore  package.json
pictd-tauri/src/: index.html  main.js  style.css
pictd-tauri/src-tauri/: Cargo.toml  tauri.conf.json
pictd-tauri/src-tauri/crates/pictd-core/: Cargo.toml
pictd-tauri/src-tauri/crates/pictd-core/src/: clipboard.rs  lib.rs  markdown.rs  storage.rs
pictd-tauri/src-tauri/crates/pictd-md/: Cargo.toml
pictd-tauri/src-tauri/crates/pictd-md/src/: app.rs  main.rs  tui.rs
pictd-tauri/src-tauri/icons/: icon.icns
pictd-tauri/src-tauri/src/: clipboard.rs  main.rs  storage.rs
